# splatastic

./: .gitignore  README.md  build.bat  meson.build  pyproject.toml
splatastic/: __init__.py  __main__.py  debug_font.py  editor.py  meson.build  overlay.py  prefix_sum.py  radix_sort.py  scene_loader.py  splat_rasterizer.py  test.py  utilities.py  vec.py
splatastic/data/: meson.build
splatastic/native/: ModuleMain.cpp  meson.build
splatastic/native/files/: FileDefs.h  FileSystem.cpp  FileSystem.h  IFileSystem.h  InternalFileSystem.cpp  InternalFileSystem.h  Utils.cpp  Utils.h
splatastic/native/scene/: PlyParser.cpp  PlyParser.h  SceneDb.cpp  SceneDb.h
splatastic/native/tasks/: ITaskSystem.h  TaskDefs.h  TaskSystem.cpp  TaskSystem.h  ThreadQueue.h  ThreadWorker.cpp  ThreadWorker.h
splatastic/native/utils/: Assert.h  ByteBuffer.cpp  ByteBuffer.h  ClTokenizer.cpp  ClTokenizer.h  GenericHandle.h  HandleContainer.h  String.h
splatastic/shaders/: meson.build  overlay_cs.hlsl  prefix_sum.hlsl  radix_sort.hlsl  splat_rasterizer_cs.hlsl
