py.install_sources(
    [
        '__init__.py',
        '__main__.py',
        'camera.py',
        'debug_font.py',
        'editor.py',
        'overlay.py',
        'scene_loader.py',
        'splat_rasterizer.py',
        'test.py',
        'transform.py',
        'vec.py',
        'utilities.py'
    ],
    subdir:'splatastic'
)

subdir('native')
subdir('data')
subdir('shaders')
